Make sure we do only use DBus in the main thread. Otherwise we crash too much (thanks to the famous libdbus bug)

BUG: 240554

svn path=/trunk/KDE/kdebase/runtime/; revision=1134047